--- a/docs/README
+++ b/docs/README
@@ -1,5 +1,9 @@
+## Introduction
 # How to contribute to OpenKilda project
-# Architecture diagrams
-## Delete flow
-## Create flow
+The folder contains OpenKilda contributor license agreemetns and tips for contributors
+
+# OpenKilda design documents
+The folder contains the main use case digrams and their descriptions.
+
 # Release notes
+The folder contains OpenKilda release notes
